--- a/run-container/Dockerfile
+++ b/run-container/Dockerfile
@@ -13,7 +13,7 @@ ARG SNAPSHOT=2025-10-11
 ENV CRAN_REPO=https://packagemanager.posit.co/cran/__linux__/jammy/${SNAPSHOT}
 
 
-# -------------------------------------------------------------------
+# ------------------------f-------------------------------------------
 # Locale (avoid malformed ENV)
 # -------------------------------------------------------------------
 ENV LC_ALL=C.UTF-8 LANG=C.UTF-8
@@ -130,14 +130,14 @@ RUN Rscript -e 'BiocManager::install("clusterProfiler", ask=FALSE, update=FALSE,
 RUN Rscript -e 'if (!requireNamespace("enrichplot", quietly = TRUE)) stop("enrichplot not installed!")'
 RUN Rscript -e 'if (!requireNamespace("clusterProfiler", quietly = TRUE)) stop("clusterProfiler not installed!")'
 
-
+#
 # -------------------------------------------------------------------
-
+#
 # install bioconductor packages
 RUN Rscript -e 'install.packages("matrixStats", repos="https://packagemanager.posit.co/cran/__linux__/jammy/latest")'
 RUN Rscript -e 'BiocManager::install("celldex", ask=FALSE, update=FALSE, verbose=TRUE)'
 
-
+#
 # -------------------------------------------------------------------
 RUN Rscript -e 'BiocManager::install(c( \
   "infercnv","scDblFinder","numbat","miQC","scater", \
@@ -146,7 +146,7 @@ RUN Rscript -e 'BiocManager::install(c( \
   "BSgenome.Hsapiens.UCSC.hg19","EnsDb.Hsapiens.v75", \
   "BSgenome.Hsapiens.UCSC.hg38","EnsDb.Hsapiens.v86", \
   "BSgenome.Mmusculus.UCSC.mm10","EnsDb.Mmusculus.v79", \
-  "JASPAR2018", "JASPAR2020", "JASPAR 2022", "JASPAR2024"), ask=FALSE, update=FALSE, verbose=TRUE)'
+  "JASPAR2018", "JASPAR2020", "JASPAR2022", "JASPAR2024"), ask=FALSE, update=FALSE, verbose=TRUE)'
 
 RUN Rscript -e 'BiocManager::install("TFBSTools", ask=FALSE, update=FALSE, verbose=TRUE)'
 RUN Rscript -e 'BiocManager::install("motifmatchr", ask=FALSE, update=FALSE, verbose=TRUE)'
@@ -160,7 +160,6 @@ RUN Rscript -e 'if (!requireNamespace("motifmatchr", quietly = TRUE)) stop("moti
 RUN Rscript -e 'if (!requireNamespace("chromVAR", quietly = TRUE)) stop("chromVAR not installed!")'
 RUN Rscript -e 'if (!requireNamespace("BSgenome.Mmusculus.UCSC.mm39", quietly = TRUE)) stop("BSgenome.Mmusculus.UCSC.mm39 not installed!")'
 
-
 # -------------------------------------------------------------------
 # GitHub packages (pinned where necessary)
 # -------------------------------------------------------------------
@@ -168,24 +167,18 @@ RUN Rscript -e 'devtools::install_github("stuart-lab/signac", ref="develop", upg
 
 RUN Rscript -e 'remotes::install_github("satijalab/seurat-wrappers@community-vignette", upgrade="never")' #&& \
     #Rscript -e 'remotes::install_version("Seurat", version="4.4.0", upgrade="never")'
-
+# 
 # -------------------------------------------------------------------
 # Install pak from the snapshot, then pin package versions
 # Use single quotes around the -e expression for clean quoting
 # -------------------------------------------------------------------
-RUN Rscript -e 'options(repos = c(CRAN = Sys.getenv("CRAN_REPO"))); install.packages("pak")'
-
 # Seurat 4.4.0 explicitly, with snapshot for consistent deps
-RUN Rscript -e 'options(repos = c(CRAN = Sys.getenv("CRAN_REPO"))); \
-                pak::pkg_install("Seurat@4.4.0", ask = FALSE)'
-
 # Match SeuratObject to Seurat v4 line (avoid SeuratObject 5.x here)
-RUN Rscript -e 'options(repos = c(CRAN = Sys.getenv("CRAN_REPO"))); \
-                pak::pkg_install("SeuratObject@4.1.4", ask = FALSE)'
 
-# (Optional) Extras commonly used with Seurat 4
-# RUN Rscript -e 'options(repos = c(CRAN = Sys.getenv("CRAN_REPO"))); \
-#                 pak::pkg_install(c("patchwork","uwot","Rtsne","future"), ask = FALSE)'
+RUN Rscript -e 'options(repos = c(CRAN = Sys.getenv("CRAN_REPO"))); \
+                install.packages("pak", lib = .Library); \
+                pak::pkg_install(c("Seurat@4.4.0"), ask = FALSE)'
+
 
 # Prove what actually got installed
 RUN Rscript -e 'cat("Seurat=", as.character(packageVersion("Seurat")), \
@@ -234,9 +227,10 @@ RUN Rscript -e 'install.packages(c( \
   "clustree", "cowplot", "data.table", "flexmix", "forcats", "fs", "future", "GGally", \
   "ggh4x", "ggpmisc", "ggrepel", "ggthemes", "harmony", "igraph", "irlba", \
   "knitr", "optparse", "patchwork", "purrr", "RColorBrewer", "remotes", "reshape2", "rlist", "R.utils", \
-  "shiny", "SoupX", "stringr", "tidytext", "tidyverse", "tinytex", "yaml", \
+  "SeuratObject", "shiny", "SoupX", "stringr", "tidytext", "tidyverse", "tinytex", "yaml", \
   "shinyhelper", "DT", "ggdendro", "ragg", "pkgdown"), \
   repos="https://packagemanager.posit.co/cran/__linux__/jammy/latest", upgrade="never")'
+
 
 RUN Rscript -e 'install.packages("flextable", repos="https://packagemanager.posit.co/cran/__linux__/jammy/latest", upgrade="never")'
 RUN Rscript -e 'if (!requireNamespace("flextable", quietly = TRUE)) stop("flextable not installed!")'
