--- a/project_parameters.Config.yaml
+++ b/project_parameters.Config.yaml
@@ -3,7 +3,7 @@ root_dir: "/sc-epigenie" # Absolute path to the main dir of the project where Gi
 data_dir: "/sc-epigenie/analyses/cellranger-analysis/results/02_cellranger_count/DefaultParameters" # Absolute path to data dir of the project with CellRanger output results. Options: "DefaultParameters", "ForcedCells8000Parameters", or else. 
 metadata_dir: "/data/project_metadata" # Absolute path to metadata dir of the project.
 metadata_file: "project_metadata.tsv" # Options: "project_metadata.tsv" (default) or name as user wants. It needs to be in `tsv` format. It can include one or more samples, as long as it contains at least the following columns in this exact order: `ID`, `SAMPLE`, and `FASTQ`. The `ID` column must contain unique values. Additional metadata columns can be added and arranged as needed by the user (though not required). For samples with multiple technical replicates, list all associated FASTQ file paths in the same row, using commas to separate each path.
-genome_name: "GRCm39" # define genome reference and versioning. Options: (1) human: "GRCh38" and "hg19"; and (2) mouse: "GRCm39", "mm10", and "mm9".
+genome_name: "GRCh38" # define genome reference and versioning. Options: (1) human: "GRCh38" and "hg19"; and (2) mouse: "GRCm39", "mm10", and "mm9".
 PROJECT_NAME: "Victoria_Knockout - Testing cohort"
 PI_NAME: "Michael A. Dyer, PhD"
 TASK_ID: "NA"
@@ -24,7 +24,7 @@ COMPLETION_DATE: "ONGOING"
 # `./analyses/cellranger-analysis`
 genome_reference_path: "./reference_genomes/cellranger-sc-atac-seq/2020-A/mus_musculus/mm10/downloads/refdata-cellranger-arc-mm10-2020-A-2.0.0" # Absolute path to genome reference to be used for the `cellranger-analysis` module.
 cellranger_parameters: "DefaultParameters" # Options: "DefaultParameters", "ForcedCells8000Parameters", or else.
-genome_name_cellranger: "GRCm39" #please define the genome of preference for dual genomes. In case for single genomes, please use the same as used for `genome_name`.
+genome_name_cellranger: "GRCh38" #please define the genome of preference for dual genomes. In case for single genomes, please use the same as used for `genome_name`.
 # Define the sample ID prefix(es) used in this project.
 # Sample IDs should follow a format like: PREFIX001 (e.g., DYE001, ABC002).
 # You can specify multiple prefixes if your project uses more than one.
@@ -34,14 +34,14 @@ sample_prefix:
   - XYZ_
 
 # `./analyses/upstream-analysis`
-genome_name_upstream: "GRCm39" # Options: (1) human: "GRCh38" and "hg19"; and (2) mouse: "GRCm39", "mm10", and "mm9".
+genome_name_upstream: "GRCh38" # Options: (1) human: "GRCh38" and "hg19"; and (2) mouse: "GRCm39", "mm10", and "mm9".
 assay_signac_qc: "peaks" # Options: "peaks" (default ALWAYS)
-# Genome-to-Ensembl Mapping Options: (1) human: "GRCh38" -> "EnsDb.Hsapiens.v86"(older); "EnsDb.Hsapiens.v98" | "hg19" -> "EnsDb.Hsapiens.v75"
+# Genome-to-Ensembl Mapping Options: (1) human: "GRCh38" -> "EnsDb.Hsapiens.v86"(older); "EnsDb.Hsapiens.v98"; "EnsDb.Hsapiens.v104"; "EnsDb.Hsapiens.v105"; "EnsDb.Hsapiens.v108" | "hg19" -> "EnsDb.Hsapiens.v75"
 #                                    (2) mouse: "GRCm39" -> "EnsDb.Mmusculus.v104" (or "EnsDb.Mmusculus.v105"), | "mm10" -> "EnsDb.Mmusculus.v79" and  | "mm9" -> No official `EnsDb` package, use "TxDb.Mmusculus.UCSC.mm9.knownGene" or similar
-annotation_Ensembl_upstream: "EnsDb.Mmusculus.v104" 
-species_upstream: "Mus musculus" # Options: "Hsapiens"; "Mus musculus"
-object_species_upstream: "AH95775" #  # Reference genome annotation ID. Options: (1) human: "GRCh38" -> "AH75011 | "AH14502"
-#                                                                                (2) mouse: "GRCm39" -> AH95775"
+annotation_Ensembl_upstream: "EnsDb.Hsapiens.v108" 
+species_upstream: "Homo sapiens" # Options: "Hsapiens"; "Mus musculus"
+object_species_upstream: "AH109336"  # Reference genome annotation ID. Options: (1) human: "GRCh38" -> "AH75011 | "AH14502" | "AH109336"
+                                     #                                         (2) mouse: "GRCm39" -> AH95775"
 min.cutoff_value_upstream: "q0" # Options: e.g., "q0" to use all peaks; "q75" to use the top 25% all peaks; "q95" to use the top 5% all peaks and so on.
 #nCount_peaks_min_upstream: "100" # Total counts across all peaks	Optional; can correlate with fragments
 #nCount_peaks_max_upstream: "20000" # Total counts across all peaks	Optional; can correlate with fragments
