--- a/project_parameters.Config.yaml
+++ b/project_parameters.Config.yaml
@@ -40,7 +40,7 @@ assay_signac_qc: "peaks" # Options: "peaks" (default ALWAYS)
 #                                    (2) mouse: "GRCm39" -> "EnsDb.Mmusculus.v104" (or "EnsDb.Mmusculus.v105"), | "mm10" -> "EnsDb.Mmusculus.v79" and  | "mm9" -> No official `EnsDb` package, use "TxDb.Mmusculus.UCSC.mm9.knownGene" or similar
 annotation_Ensembl_upstream: "EnsDb.Hsapiens.v108" 
 species_upstream: "Homo sapiens" # Options: "Hsapiens"; "Mus musculus"
-object_species_upstream: "AH109336" #  # Reference genome annotation ID. This needs to match the `annotation_Ensembl_upstream` as it is available in the AnnotationHub. 
+object_species_upstream: "AH109336" # Reference genome annotation ID. This needs to match the `annotation_Ensembl_upstream` as it is available in the AnnotationHub. 
                                     # Options: (1) human: "GRCh38" -> "AH75011 | "AH14502" | "AH109336" ("EnsDb.Hsapiens.v108")
                                     #          (2) mouse: "GRCm39" -> AH95775" ("EnsDb.Mmusculus.v104")
 min.cutoff_value_upstream: "q0" # Options: e.g., "q0" to use all peaks; "q75" to use the top 25% all peaks; "q95" to use the top 5% all peaks and so on.
