--- a/project_parameters.Config.yaml
+++ b/project_parameters.Config.yaml
@@ -39,7 +39,7 @@ assay_signac_qc: "peaks" # Options: "peaks" (default ALWAYS)
 # Genome-to-Ensembl Mapping Options: (1) human: "GRCh38" -> "EnsDb.Hsapiens.v86"(older); "EnsDb.Hsapiens.v98"; "EnsDb.Hsapiens.v104"; "EnsDb.Hsapiens.v105"; "EnsDb.Hsapiens.v108" | "hg19" -> "EnsDb.Hsapiens.v75"
 #                                    (2) mouse: "GRCm39" -> "EnsDb.Mmusculus.v104" (or "EnsDb.Mmusculus.v105"), | "mm10" -> "EnsDb.Mmusculus.v79" and  | "mm9" -> No official `EnsDb` package, use "TxDb.Mmusculus.UCSC.mm9.knownGene" or similar
 annotation_Ensembl_upstream: "EnsDb.Hsapiens.v108" 
-species_upstream: "Homo sapiens" # Options: "Hsapiens"; "Mus musculus"
+species_upstream: "Homo sapiens" # Options: "Homo sapiens"; "Mus musculus"
 object_species_upstream: "AH109336" # Reference genome annotation ID. This needs to match the `annotation_Ensembl_upstream` as it is available in the AnnotationHub. 
                                     # Options: (1) human: "GRCh38" -> "AH75011 | "AH14502" | "AH109336" ("EnsDb.Hsapiens.v108")
                                     #          (2) mouse: "GRCm39" -> AH95775" ("EnsDb.Mmusculus.v104")
